--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,11 +26,16 @@ http {
     # Rate limit zone for auth
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
 
+    # ------------------------------------------------
+    # Server
+    # ------------------------------------------------
     server {
         listen 80;
         server_name localhost;
 
-        # Static files (JS, CSS, etc.)
+        # -------------------
+        # Static files
+        # -------------------
         location /js/ {
             root /usr/local/openresty/nginx/html;
         }
@@ -43,10 +48,12 @@ http {
             root /usr/local/openresty/nginx/html;
         }
 
-        # ------------------------------------------------
+        # -------------------
         # AUTH ENDPOINTS
-        # ------------------------------------------------
+        # -------------------
         location = /api/auth/login {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local auth = require "auth"
                 auth.handle_login()
@@ -54,36 +61,44 @@ http {
         }
 
         location = /api/auth/me {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local auth = require "auth"
                 auth.handle_me()
             }
         }
 
-        # ------------------------------------------------
-        # REGISTER ENDPOINT
-        # ------------------------------------------------
+        # -------------------
+        # REGISTER
+        # -------------------
         location = /api/register {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local register = require "register"
                 register.handle_register()
             }
         }
 
-        # ------------------------------------------------
-        # CHAT ENDPOINT
-        # ------------------------------------------------
+        # -------------------
+        # CHAT
+        # -------------------
         location = /api/chat {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local chat = require "chat"
                 chat.handle_chat()
             }
         }
 
-        # ------------------------------------------------
-        # ADMIN ENDPOINT
-        # ------------------------------------------------
+        # -------------------
+        # ADMIN
+        # -------------------
         location = /api/admin {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local admin = require "admin"
                 admin.handle_admin()
@@ -101,27 +116,61 @@ http {
             try_files /login.html =404;
         }
 
+        location = /register.html {
+            try_files /register.html =404;
+        }
+
+        # Protected page: chat
         location = /chat.html {
+            access_by_lua_block {
+                local jwt = require "resty.jwt"
+                local token = ngx.var.cookie_access_token
+                if not token then
+                    return ngx.redirect("/login.html?redirect=chat.html", 302)
+                end
+
+                local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
+                if not jwt_obj.verified then
+                    return ngx.redirect("/login.html?redirect=chat.html", 302)
+                end
+            }
             try_files /chat.html =404;
         }
 
+        # Protected page: admin
         location = /admin.html {
-            try_files /admin.html =404;
-        }
+            access_by_lua_block {
+                local jwt = require "resty.jwt"
+                local token = ngx.var.cookie_access_token
+                if not token then
+                    return ngx.redirect("/login.html?redirect=admin.html", 302)
+                end
 
-        location = /register.html {
-            try_files /register.html =404;
+                local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
+                if not jwt_obj.verified or not jwt_obj.payload.is_admin then
+                    return ngx.redirect("/login.html?redirect=admin.html", 302)
+                end
+            }
+            try_files /admin.html =404;
         }
 
         location = /rate_limit.html {
             try_files /rate_limit.html =404;
         }
 
-        # ------------------------------------------------
         # Default fallback
-        # ------------------------------------------------
         location / {
             try_files $uri $uri/ =404;
+        }
+        error_page 404 /rate_limit.html;
+        error_page 500 502 503 504 /50x.html;
+        location = /rate_limit.html {
+            internal;
+            try_files /rate_limit.html =404;
+        }
+        location = /50x.html {
+            internal;
+            try_files /50x.html =500;
         }
     }
 }
