--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,30 +20,21 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Add Docker internal DNS resolver so container hostnames work
     resolver 127.0.0.11 ipv6=off;
 
-    # Rate limit zone for auth
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
 
-    # ------------------------------------------------
-    # Server
-    # ------------------------------------------------
     server {
         listen 80;
         server_name localhost;
 
-        # -------------------
         # Static files
-        # -------------------
         location /js/ {
             root /usr/local/openresty/nginx/html;
         }
-
         location /css/ {
             root /usr/local/openresty/nginx/html;
         }
-
         location /assets/ {
             root /usr/local/openresty/nginx/html;
         }
@@ -105,17 +96,15 @@ http {
             }
         }
 
-        # ------------------------------------------------
+        # -------------------
         # Page routes
-        # ------------------------------------------------
+        # -------------------
         location = / {
             try_files /index.html =404;
         }
-
         location = /login.html {
             try_files /login.html =404;
         }
-
         location = /register.html {
             try_files /register.html =404;
         }
@@ -128,7 +117,6 @@ http {
                 if not token then
                     return ngx.redirect("/login.html?redirect=chat.html", 302)
                 end
-
                 local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
                 if not jwt_obj.verified then
                     return ngx.redirect("/login.html?redirect=chat.html", 302)
@@ -145,7 +133,6 @@ http {
                 if not token then
                     return ngx.redirect("/login.html?redirect=admin.html", 302)
                 end
-
                 local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
                 if not jwt_obj.verified or not jwt_obj.payload.is_admin then
                     return ngx.redirect("/login.html?redirect=admin.html", 302)
@@ -155,22 +142,22 @@ http {
         }
 
         location = /rate_limit.html {
+            internal;
             try_files /rate_limit.html =404;
+        }
+
+        location = /50x.html {
+            internal;
+            try_files /50x.html =500;
         }
 
         # Default fallback
         location / {
             try_files $uri $uri/ =404;
         }
+
+        # Error pages
         error_page 404 /rate_limit.html;
         error_page 500 502 503 504 /50x.html;
-        location = /rate_limit.html {
-            internal;
-            try_files /rate_limit.html =404;
-        }
-        location = /50x.html {
-            internal;
-            try_files /50x.html =500;
-        }
     }
 }
