--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,8 +19,11 @@ http {
 
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
+    # Docker dns
     resolver 127.0.0.11 ipv6=off;
+    # Home grown auth
+    lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
+
 
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
 
