--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,6 @@ http {
     # Home grown auth
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
 
-
     limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/s;
 
     server {
@@ -48,7 +47,9 @@ http {
         location = /api/auth/login {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
+            lua_need_request_body on;
             content_by_lua_block {
+                ngx.req.read_body()
                 local auth = require "auth"
                 auth.handle_login()
             }
@@ -69,7 +70,9 @@ http {
         location = /api/register {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
+            lua_need_request_body on;
             content_by_lua_block {
+                ngx.req.read_body()
                 local register = require "register"
                 register.handle_register()
             }
@@ -81,9 +84,11 @@ http {
         location = /api/chat {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'true';
+            lua_need_request_body on;
             content_by_lua_block {
+                ngx.req.read_body()
                 local chat = require "chat"
-                chat.handle_chat()
+                chat.handle_chat_message()
             }
         }
 
@@ -95,7 +100,7 @@ http {
             add_header 'Access-Control-Allow-Credentials' 'true';
             content_by_lua_block {
                 local admin = require "admin"
-                admin.handle_admin()
+                admin.handle_admin_panel()
             }
         }
 
