--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -142,12 +142,13 @@ http {
                     return ngx.redirect("/login.html?redirect=admin.html", 302)
                 end
                 local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
-                if not jwt_obj.verified or not jwt_obj.payload.is_admin then
+                if not jwt_obj.verified then
                     return ngx.redirect("/login.html?redirect=admin.html", 302)
                 end
             }
             try_files /admin.html =404;
         }
+
 
         location = /rate_limit.html {
             internal;
