SUPER WORK YO... super

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,20 +26,52 @@ http {
         listen 80;
         server_name localhost;
 
-        # Static files
+        # Static files - Updated paths to match your directory structure
         location /js/ {
             root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
         }
+        
         location /css/ {
             root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
         }
+        
         location /assets/ {
             root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Static files from the static directory (if any)
+        location /static/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Favicon
+        location = /favicon.ico {
+            root /usr/local/openresty/nginx/html;
+            log_not_found off;
+            access_log off;
         }
 
         # API endpoints
         location = /api/auth/login {
             add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
             lua_need_request_body on;
             content_by_lua_block {
                 ngx.req.read_body()
@@ -48,13 +80,82 @@ http {
             }
         }
 
+        location = /api/auth/me {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            content_by_lua_block {
+                local jwt = require "resty.jwt"
+                local cjson = require "cjson"
+                local JWT_SECRET = os.getenv("JWT_SECRET") or "super-secret-key-CHANGE"
+                
+                local token = ngx.var.cookie_access_token
+                if not token then
+                    ngx.status = 401
+                    ngx.header.content_type = 'application/json'
+                    ngx.say(cjson.encode({success = false, error = "No token"}))
+                    ngx.exit(401)
+                end
+
+                local jwt_obj = jwt:verify(JWT_SECRET, token)
+                if not jwt_obj.verified then
+                    ngx.status = 401
+                    ngx.header.content_type = 'application/json'
+                    ngx.say(cjson.encode({success = false, error = "Invalid token"}))
+                    ngx.exit(401)
+                end
+
+                ngx.status = 200
+                ngx.header.content_type = 'application/json'
+                ngx.say(cjson.encode({
+                    success = true, 
+                    username = jwt_obj.payload.username,
+                    is_admin = false -- This should be fetched from Redis in production
+                }))
+                ngx.exit(200)
+            }
+        }
+
         location = /api/register {
             add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
             lua_need_request_body on;
             content_by_lua_block {
                 ngx.req.read_body()
                 local register = require "register"
                 register.handle_register()
+            }
+        }
+
+        # Admin API endpoints
+        location ~ ^/api/admin/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            content_by_lua_block {
+                local cjson = require "cjson"
+                ngx.status = 501
+                ngx.header.content_type = 'application/json'
+                ngx.say(cjson.encode({error = "Admin API not yet implemented"}))
+                ngx.exit(501)
             }
         }
 
@@ -87,8 +188,23 @@ http {
             try_files /index.html =404;
         }
 
-        # Errors
-        error_page 404 /index.html;
-        error_page 500 502 503 504 /index.html;
+        # Health check
+        location = /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # Error pages
+        error_page 404 /404.html;
+        error_page 500 502 503 504 /50x.html;
+        
+        location = /404.html {
+            internal;
+        }
+        
+        location = /50x.html {
+            internal;
+        }
     }
 }
