--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -86,34 +86,8 @@ http {
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
             
             content_by_lua_block {
-                local jwt = require "resty.jwt"
-                local cjson = require "cjson"
-                local JWT_SECRET = os.getenv("JWT_SECRET") or "super-secret-key-CHANGE"
-                
-                local token = ngx.var.cookie_access_token
-                if not token then
-                    ngx.status = 401
-                    ngx.header.content_type = 'application/json'
-                    ngx.say(cjson.encode({success = false, error = "No token"}))
-                    ngx.exit(401)
-                end
-
-                local jwt_obj = jwt:verify(JWT_SECRET, token)
-                if not jwt_obj.verified then
-                    ngx.status = 401
-                    ngx.header.content_type = 'application/json'
-                    ngx.say(cjson.encode({success = false, error = "Invalid token"}))
-                    ngx.exit(401)
-                end
-
-                ngx.status = 200
-                ngx.header.content_type = 'application/json'
-                ngx.say(cjson.encode({
-                    success = true, 
-                    username = jwt_obj.payload.username,
-                    is_admin = false -- This should be fetched from Redis in production
-                }))
-                ngx.exit(200)
+                local auth = require "auth"
+                auth.handle_me()
             }
         }
 
